Update demo